tests/compile-fail/integration__integration__general__func_param_named_after_reg.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: unexpected token `REG`
   ┌─ <input>:26:22
   │
26 │         void foo(int REG[100]) {}
   │                      ^^^ unexpected token
   │
   = 
     Expected one of ")", ",", ";", "anim", "case", "default", "ecli", "entry", "game", "image_source", "mapfile", "script" or IDENT


